--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt": "~1.0.1",
     "grunt-cli": "~1.2.0",
     "mongoose-paginate": "~5.0.3",
-    "express-session": "~1.15.0"
+    "express-session": "~1.15.0",
+    "suggestgrid" : "https://github.com/suggestgrid/suggestgrid-node.git"
   }
 }
