--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "PORT=3001 node ./bin/www",
     "test":  "mocha --timeout 10000 --recursive"
   },
   "dependencies": {
